added sound effects

--- a/scrabbleBoard/scrabble.css
+++ b/scrabbleBoard/scrabble.css
@@ -56,7 +56,7 @@ details{
     margin: auto;
 }
 
-#playButton{
+#playMe{
     background-color: cadetblue;
     border: black thin solid;
     border-radius: 1em;
